--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,6 +20,8 @@
 # Site Layout
 # Site Sub Header Layout
 # Site Text Editor
+# Youzify Support
+# WP Idea Stream
 --------------------------------------------------------------*/
 
 
@@ -131,6 +133,7 @@ body.elementor-editor-active .site-header-wrapper {
 
 @media (--sidebar-query) {
     .has-sidebar-right:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .site-wrapper,
+    .has-sidebar-right.bpsh-buddypress .site-wrapper,
     .has-buddypress-sidebar-right:not(.bp-user):not(.single-item):not(.group-create) .site-wrapper,
     .has-bbpress-sidebar-right.bbpress:not(.buddypress) .site-wrapper,
     .has-woocommerce-sidebar-right .site-wrapper {
@@ -140,6 +143,7 @@ body.elementor-editor-active .site-header-wrapper {
         justify-content: center;
     }
     .has-sidebar-left:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .site-wrapper,
+    .has-sidebar-left.bpsh-buddypress .site-wrapper,
     .has-buddypress-sidebar-left:not(.bp-user):not(.single-item):not(.group-create) .site-wrapper,
     .has-bbpress-sidebar-left.bbpress:not(.buddypress) .site-wrapper,
     .has-woocommerce-sidebar-left .site-wrapper {
@@ -149,6 +153,7 @@ body.elementor-editor-active .site-header-wrapper {
         justify-content: center;
     }
     .has-sidebar-both:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .site-wrapper,
+    .has-sidebar-both.bpsh-buddypress .site-wrapper,
     .has-buddypress-sidebar-both:not(.bp-user):not(.single-item):not(.group-create) .site-wrapper,
     .has-bbpress-sidebar-both.bbpress:not(.buddypress) .site-wrapper,
     .has-woocommerce-sidebar-both .site-wrapper {
@@ -158,6 +163,7 @@ body.elementor-editor-active .site-header-wrapper {
         justify-content: center;
     }
     .has-sidebar-both:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .primary-sidebar,
+    .has-sidebar-both.bpsh-buddypress .primary-sidebar,
     .has-buddypress-sidebar-both:not(.bp-user):not(.single-item):not(.group-create) .primary-sidebar,
     .has-bbpress-sidebar-both.bbpress:not(.buddypress) .primary-sidebar,
     .has-woocommerce-sidebar-both .primary-sidebar {
@@ -166,6 +172,7 @@ body.elementor-editor-active .site-header-wrapper {
         min-width: 0;
     }
     .has-sidebar-both:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .site-main,
+    .has-sidebar-both.bpsh-buddypress .site-main,
     .has-buddypress-sidebar-both:not(.bp-user):not(.single-item):not(.group-create) .site-main,
     .has-bbpress-sidebar-both.bbpress:not(.buddypress) .site-main,
     .has-woocommerce-sidebar-both .site-main {
@@ -173,6 +180,7 @@ body.elementor-editor-active .site-header-wrapper {
         min-width: 0;
     }
     .has-sidebar-both:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .primary-sidebar,
+    .has-sidebar-both.bpsh-buddypress .primary-sidebar,
     .has-buddypress-sidebar-both:not(.bp-user):not(.single-item):not(.group-create) .primary-sidebar,
     .has-bbpress-sidebar-both.bbpress:not(.buddypress) .primary-sidebar,
     .has-woocommerce-sidebar-both .primary-sidebar {
@@ -188,6 +196,7 @@ body.elementor-editor-active .site-header-wrapper {
         min-width: 0;
     }
     .has-sidebar-left:not(.buddypress):not(.bbpress):not(.woocommerce):not(.woocommerce-page):not(.page-template-full-width-container) .site-main,
+    .has-sidebar-left.bpsh-buddypress .site-main,
     .has-buddypress-sidebar-left:not(.bp-user):not(.single-item):not(.group-create) .site-main,
     .has-bbpress-sidebar-left.bbpress:not(.buddypress) .site-main,
     .has-woocommerce-sidebar-left .site-main {
@@ -1569,12 +1578,18 @@ body.layout-boxed {
     left: 50%;
 }
 
-.site-sub-header>.container {
+.site-sub-header>.container,
+.site-sub-header .woocommerce-products-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-flow: row wrap;
     padding: 0 15px;
+}
+
+.site-sub-header .woocommerce-products-header {
+    width: 100%;
+    padding: 0;
 }
 
 .site-sub-header>.container::before {
@@ -1624,7 +1639,6 @@ body.layout-boxed {
 .buddyx-breadcrumbs,
 #breadcrumbs {
     font-size: 14px;
-    margin: 0;
 }
 
 .buddyx-breadcrumbs a,
@@ -1635,6 +1649,25 @@ body.layout-boxed {
 .buddyx-breadcrumbs a:hover,
 #breadcrumbs a:hover {
     text-decoration: underline;
+}
+
+.buddyx-trail-items {
+    list-style: none;
+}
+
+.buddyx-trail-items,
+.buddyx-trail-items li {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background: inherit;
+    text-indent: 0;
+}
+
+.buddyx-trail-items li:not(.trail-end)::after {
+    padding: 0 0.3em;
+    content: "\00bb";
 }
 
 
@@ -1703,4 +1736,166 @@ button.media-menu-item {
 .media-router .media-menu-item:hover {
     background: 0 0 !important;
     border: 0 !important;
+}
+
+
+/*--------------------------------------------------------------
+# Youzify Support
+--------------------------------------------------------------*/
+
+body.youzify-active #youzify .youzify-page {
+    width: 100vw;
+    margin-left: -50vw;
+    left: 50%;
+}
+
+body.youzify-active .youzify-global-wall .youzify-page-main-content,
+body.youzify-active .youzify-content main.youzify-page-main-content,
+body.youzify-active .youzify-profile-header .youzify-inner-content,
+body.youzify-active #youzify-profile-navmenu .youzify-inner-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+body.youzify-active button.youzify-responsive-menu {
+    border: 0;
+    display: none;
+    border-radius: 0;
+}
+
+body.youzify-active button.youzify-responsive-menu:hover,
+body.youzify-active button.youzify-responsive-menu:focus {
+    border: 0;
+    border-radius: 0;
+}
+
+@media screen and (max-width: 768px) {
+    body.youzify-active button.youzify-responsive-menu {
+        display: block;
+    }
+}
+
+body.youzify-active .widget.buddypress.widget_bp_core_members_widget div.item-options a,
+body.youzify-active .widget.buddypress.widget_bp_groups_widget div.item-options a {
+    color: #fff!important;
+    font-size: 10px;
+    box-shadow: none;
+    font-weight: 600;
+    padding: 6px 12px;
+    text-shadow: none;
+    margin: 10px 8px 0 0;
+    display: inline-block;
+    text-decoration: none;
+    letter-spacing: .05em;
+    border: none!important;
+    background-color: #898989;
+    text-transform: uppercase;
+}
+
+body.youzify-active .footer-widget .buddypress.widget .item-list,
+body.youzify-active .footer-widget .buddypress.widget .item-options {
+    padding: 0 !important;
+}
+
+
+/*--------------------------------------------------------------
+# WP Idea Stream
+--------------------------------------------------------------*/
+
+#wp-idea-stream button:not(.ed_button):not(.search-submit):not(.submit-sort):not(.wp-embed-share-dialog-close),
+#wp-idea-stream a.button,
+a.wpis-title-button,
+#wp-idea-stream input[type=submit]:not(.search-submit),
+#wp-idea-stream input[type=button]:not(.ed_button),
+#wp-idea-stream input[type=reset],
+body.single-ideas #comments .comment-reply-link {
+    font-family: inherit;
+    font-size: inherit;
+    color: #fff;
+    background-color: var(--button_background_color);
+    border-radius: 3px;
+    padding: 10px 20px;
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.3;
+    border: 1px solid var(--button_border_color);
+    outline: 0;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all linear .2s;
+    transition: all linear .2s;
+}
+
+#wp-idea-stream button:hover:not(.ed_button):not(.search-submit):not(.submit-sort):not(.wp-embed-share-dialog-close),
+#wp-idea-stream a.button:hover,
+#wp-idea-stream a.button:focus,
+a.wpis-title-button:hover,
+a.wpis-title-button:focus,
+#wp-idea-stream input[type=submit]:hover:not(.search-submit),
+#wp-idea-stream input[type=button]:hover:not(.ed_button),
+#wp-idea-stream input[type=reset]:hover,
+body.single-ideas #comments .comment-reply-link:hover {
+    background-color: var(--button_background_hover_color);
+    border: 1px solid var(--button_border_hover_color);
+}
+
+#wp-idea-stream div#pag-top {
+    margin-bottom: 2em;
+    border-bottom: 1px solid var(--global-border-color);
+    border-radius: 0;
+}
+
+#wp-idea-stream div#pag-bottom {
+    border-top: 1px solid var(--global-border-color);
+    border-radius: 0;
+}
+
+#wp-idea-stream ul.idea-list>li {
+    position: relative;
+    margin: 1rem 0;
+    padding: 1em;
+    border: 1px solid var(--global-border-color);
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    border-radius: 8px;
+    background: #fff;
+}
+
+#wp-idea-stream ul.idea-list>li+li {
+    margin-top: 2em;
+}
+
+.idea-footer {
+    border-top: 1px solid var(--global-border-color);
+}
+
+#wp-idea-stream .idea-list li .has_featured_image div.idea-footer {
+    margin-bottom: 0;
+}
+
+#wp-idea-stream ul.idea-list .idea-content.has_featured_image {
+    margin: 0;
+}
+
+ul#ideas-main-nav form#searchform {
+    display: flex;
+    align-items: center;
+}
+
+#wp-idea-stream ul#ideas-main-nav li form input {
+    height: 38px;
+}
+
+#wp-idea-stream ul#ideas-main-nav li form input[type=submit] {
+    line-height: 1.1;
+}
+
+#wp-idea-stream ul.idea-list .idea-avatar img,
+#wp-idea-stream ul.idea-comments-list .idea-comment-avatar img {
+    border-radius: 3px;
 }
