--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -419,30 +419,34 @@ select {
 --------------------------------------------------------------*/
 
 .site-header-wrapper {
+    position: relative;
     margin: 0;
-    margin-bottom: 30px;
     padding-top: 5px;
     padding-bottom: 5px;
     border-top: 0;
-    border-top: 1px solid var(--global-border-color);
-    border-bottom: 1px solid var(--global-border-color);
     background: #fff;
     min-height: 51px;
-    transition: all .2s;
+    z-index: 999;
     box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.05), 0 5px 10px 0 rgba(189, 189, 189, 0.15);
 }
 
 .site-header-wrapper.has-sticky-header {
-    box-shadow: 0 1px 0 0 rgba(206, 206, 206, 0.05), 0 5px 10px 0 rgba(132, 132, 132, 0.15);
-}
-
-.site-header-wrapper {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     width: 100%;
-    z-index: 9999;
+    z-index: 999;
+}
+
+@media (max-width: 767px) {
+    .site-header-wrapper {
+        z-index: 9999;
+    }
+}
+
+.site-header-wrapper.has-sticky-header {
+    box-shadow: 0 1px 0 0 rgba(206, 206, 206, 0.05), 0 5px 10px 0 rgba(132, 132, 132, 0.15);
 }
 
 .site-header {
@@ -535,12 +539,12 @@ select {
     display: none;
 }
 
-body.admin-bar .site-header-wrapper {
+body.admin-bar .site-header-wrapper.has-sticky-header {
     top: 32px;
 }
 
 @media (max-width: 782px) {
-    body.admin-bar .site-header-wrapper {
+    body.admin-bar .site-header-wrapper.has-sticky-header {
         top: 46px;
     }
     .main-navigation .user-profile-menu .sub-menu {
@@ -600,6 +604,9 @@ body.admin-bar .site-header-wrapper {
         -moz-transition: all 0.3s ease;
         -o-transition: all 0.3s ease;
         transition: all 0.3s ease;
+    }
+    .has-sticky-header .mobile-menu-close {
+        z-index: 99;
     }
     .mobile-menu-opened .mobile-menu-close {
         opacity: 1;
