--- a/assets/css/loaders.css
+++ b/assets/css/loaders.css
@@ -33,6 +33,30 @@
     text-shadow: 5px 5px 0px #fff;
 }
 
+@media (max-width: 1200px) {
+    .loader-inner:before {
+        font-size: 6em;
+    }
+}
+
+@media(max-width: 991px) {
+    .loader-inner:before {
+        font-size: 5em;
+    }
+}
+
+@media(max-width: 767px) {
+    .loader-inner:before {
+        font-size: 4em;
+    }
+}
+
+@media(max-width: 480px) {
+    .loader-inner:before {
+        font-size: 2em;
+    }
+}
+
 .loader-inner {
     left: 0;
     position: absolute;
