--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -1,12 +1,6 @@
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
-# Imports
-	# Custom properties
-	# Reset
-	# Typography
-	# Elements
-	# Links
 # Global Buddypress CSS
 # rtMedia Specific
 # Activity Directory
@@ -37,17 +31,6 @@
     # BuddyPress Giphy
 --------------------------------------------------------------*/
 
-
-/*--------------------------------------------------------------
-# Imports
---------------------------------------------------------------*/
-
-@import "_custom-properties.css";
-@import "_reset.css";
-@import "_typography.css";
-@import "_elements.css";
-@import "_links.css";
-@import "_grid.css";
 
 /*--------------------------------------------------------------
 # Global Buddypress Css
@@ -168,7 +151,8 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content button
 body.bp-nouveau.media #buddypress div#item-header div#item-header-content a,
 .buddypress .buddypress-wrap button.button,
 .buddypress .buddypress-wrap button.button.edit,
-.buddypress .buddypress-wrap .btn-default {
+.buddypress .buddypress-wrap .btn-default,
+.moderation-popup .modal-container .bb-model-footer .button.report-submit {
     font-family: inherit;
     font-size: initial;
     color: #fff;
@@ -213,7 +197,8 @@ body.bp-nouveau.media #buddypress div#item-header div#item-header-content button
 body.bp-nouveau.media #buddypress div#item-header div#item-header-content a:hover,
 .buddypress .buddypress-wrap button.button:hover,
 .buddypress .buddypress-wrap button.button.edit:hover,
-.buddypress .buddypress-wrap .btn-default:hover {
+.buddypress .buddypress-wrap .btn-default:hover,
+.moderation-popup .modal-container .bb-model-footer .button.report-submit:hover {
     background-color: var(--button_background_hover_color);
     border: 1px solid var(--button_border_hover_color);
     color: #fff;
